k8s/hoge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoge-go
spec:
  selector:
    app: hoge-go
  ports:
    - port: 80
      targetPort: 80
